[package]
name = "redeemer_script"
version = "0.1.0"
edition = "2021"

[dependencies]
# Garden crate for HTLC primitives
garden = { git = "https://version.btcfi.wtf/hashiraio/garden-rs.git", rev = "5d81d24624587ffa7db44cebb0dfeeab1f2b77e1", features = [
    "bitcoin",
] }

# Bitcoin
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto / hex
hex = "0.4"
sha2 = "0.10"

# Error handling
eyre = "0.6"

# HTTP client (needed by indexer)
reqwest = "0.12"
